[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuseiot"
version = "0.1.0"
description = "Deterministic device control SDK for IoT hardware"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "FuseIoT Contributors"}
]
keywords = ["iot", "hardware", "control", "mqtt", "automation", "embedded"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
]

dependencies = [
    "requests>=2.28.0",
    "paho-mqtt>=1.6.0",
    "typing-extensions>=4.0.0; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "responses>=0.23.0",
    "aiomqtt>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/fuseiot/fuseiot"
Documentation = "https://fuseiot.readthedocs.io"
Repository = "https://github.com/fuseiot/fuseiot.git"
Issues = "https://github.com/fuseiot/fuseiot/issues"

[tool.hatch.build.targets.wheel]
packages = ["fuseiot"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"