[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuseiot"
version = "1.0.0"
description = "Deterministic device control SDK for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "FuseIoT Team", email = "team@fuseiot.dev"}
]
keywords = ["iot", "devices", "automation", "control", "hardware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "structlog>=22.0.0",
    "pydantic>=1.10.0",
    "PyYAML>=6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
http = ["aiohttp>=3.8.0", "requests>=2.28.0"]
mqtt = ["paho-mqtt>=1.6.0"]
websocket = ["websockets>=10.0"]
serial = ["pyserial>=3.5"]
redis = ["redis>=4.0.0"]
monitoring = ["prometheus-client>=0.15.0"]
all = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "paho-mqtt>=1.6.0",
    "websockets>=10.0",
    "pyserial>=3.5",
    "redis>=4.0.0",
    "prometheus-client>=0.15.0",
]

[project.scripts]
fuseiot = "fuseiot.cli.main:main"

[project.urls]
Homepage = "https://github.com/fuseiot/fuseiot"
Documentation = "https://fuseiot.readthedocs.io"
Repository = "https://github.com/fuseiot/fuseiot.git"
Issues = "https://github.com/fuseiot/fuseiot/issues"

[tool.hatch.build.targets.wheel]
packages = ["fuseiot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"